# axum-rs-test

./: .env.example  Cargo.toml
migrations/2023-08-05-205254_create_users_table/: up.sql
migrations/2023-08-06-010341_create_boards_table/: down.sql  up.sql
migrations/2023-08-06-010342_create_widgets_table/: down.sql  up.sql
migrations/2023-08-06-202456_create_auth_table/: down.sql  up.sql
src/: custom_error_handler.rs  db.rs  error_handler.rs  main.rs  models.rs  schema.rs
src/auth/: model.rs  routes.rs
src/boards/: model.rs  routes.rs
src/config/: config.rs  db.rs  jwt.rs  mod.rs
src/controllers/: auth.rs  board.rs  user.rs  widget.rs
src/models/: auth.rs  board.rs  mod.rs  user.rs  widget.rs
src/router/: api.rs  main.rs  mod.rs  web.rs
src/users/: model.rs  routes.rs
src/utils/: jwt.rs  mailer.rs  mod.rs  utils.rs
src/widgets/: model.rs  routes.rs
