[package]
name = "axum-rs-test"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6", features = ["macros"] }
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.4.3", features = ["trace"] }
dotenv = "0.11"
uuid = { version = "0.6", features = ["serde", "v4"] }
r2d2 = "0.8"
lazy_static = "1.4"
env_logger = "0.6"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tower-livereload = "0.8.0"
rand = "0.8.5"
mail-send = "0.4.0"
async-trait = "0.1.72"
